--- a/src/components/css/IFrame.css
+++ b/src/components/css/IFrame.css
@@ -5,7 +5,18 @@
 }
 
 .project__iframe {
-  width: 100%;
-  height: 100%;
-  /* Add other styles for the iframe if needed */
+    position: relative;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
